--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,9 +18,8 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -34,15 +33,15 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-fonts:
-  - family: Poppins
-    fonts:
-      - asset: fonts/Poppins-Bold.ttf
-      - asset: fonts/Poppins-Medium.ttf
-      - asset: fonts/Poppins-Regular.ttf
-      - asset: fonts/Poppins-SemiBold.ttf
-  - family: "DM Sans"
-    fonts:
-      - asset: fonts/DMSans-Bold.ttf
-      - asset: fonts/DMSans-Medium.ttf
-      - asset: fonts/DMSans-Regular.ttf
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: fonts/Poppins-Bold.ttf
+        - asset: fonts/Poppins-Medium.ttf
+        - asset: fonts/Poppins-Regular.ttf
+        - asset: fonts/Poppins-SemiBold.ttf
+    - family: "DM Sans"
+      fonts:
+        - asset: fonts/DMSans-Bold.ttf
+        - asset: fonts/DMSans-Medium.ttf
+        - asset: fonts/DMSans-Regular.ttf
