--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_native_splash: ^2.1.6
+  flutter_launcher_icons: ^0.9.2
+
+flutter_icons:
+  image_path: "assets/launcherIcon.png"
+  android: true
+  ios: true
 
 dev_dependencies:
   flutter_test:
@@ -20,7 +27,6 @@ flutter:
 
   assets:
     - assets/
-  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -45,3 +51,7 @@ flutter:
         - asset: fonts/DMSans-Bold.ttf
         - asset: fonts/DMSans-Medium.ttf
         - asset: fonts/DMSans-Regular.ttf
+flutter_native_splash:
+  color: "#011100"
+  image: assets/Logo.png
+  branding_mode: bottom
