--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter_native_splash: ^2.1.6
   flutter_launcher_icons: ^0.9.2
   expandable: ^5.0.1
+  form_field_validator: ^1.0.1
 
 flutter_icons:
   image_path: "assets/launcherIcon.png"
