--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,9 @@ dependencies:
   flutter_native_splash: ^2.1.6
   flutter_launcher_icons: ^0.9.2
   expandable: ^5.0.1
+  firebase_database: 7.1.1
+  firebase_core: ^1.14.1
+  cloud_firestore: ^3.1.12
 
 flutter_icons:
   image_path: "assets/launcherIcon.png"
