--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.voting_app">
+    <uses-permission android:name="android.permission.USE_FINGERPRINT"/>
    <application
         android:label="Senior vote"
         android:name="${applicationName}"
