--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   firebase_database: 7.1.1
   firebase_core: ^1.14.1
   cloud_firestore: ^3.1.12
+  local_auth: ^0.6.3+4
+  device_id: ^0.1.3
 
 flutter_icons:
   image_path: "assets/launcherIcon.png"
