--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_native_splash: ^2.1.6
+  flutter_launcher_icons: ^0.11.0
+  expandable: ^5.0.1
+
+flutter_icons:
+  image_path: "assets/launcherIcon.png"
+  android: true
+  ios: true
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
 
 flutter:
   uses-material-design: true
